apps/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-website-service
  namespace: website
spec:
  selector:
    app: personal-website
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
