apps/website/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: personal-website-route
  namespace: website
spec:
  parentRefs:
    - name: main-gateway
      namespace: gateway-system
  hostnames:
    - "steven.cluster.stevenchen.one"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: personal-website-service
          port: 80
